2016-03-15  Chris Dumez  <cdumez@apple.com>

        Regression(r197939): ASSERTION FAILED: url.containsOnlyASCII() in URL.cpp
        https://bugs.webkit.org/show_bug.cgi?id=155449
        <rdar://problem/25134826>

        Reviewed by Carlos Garcia Campos.

        Bump WK2 Network Disk Cache version after r197939 as the new cache format
        is not compatible with the old one and leads to assertions being hit when
        browsing in Debug builds.

        SubresourceInfo used to only contain a boolean and would therefore be
        serialized as "0" / "1". However, after r197939, a URL field was added
        and when trying to decode old cache entries with the new format, we
        would try to construct a URL from the String "0" or "1". This would
        assert because these are not valid URLs.

        * NetworkProcess/cache/NetworkCacheStorage.h:

2016-03-14  Chris Dumez  <cdumez@apple.com>

        Unreviewed, rolling out r197981.

        Caused a massive PLT regression on Mac.

        Reverted changeset:

        "Font antialiasing (smoothing) changes when elements are
        rendered into compositing layers"
        https://bugs.webkit.org/show_bug.cgi?id=23364
        http://trac.webkit.org/changeset/197981

2016-03-14  Sam Weinig  <sam@webkit.org>

        Add a baseURL parameter to _WKUserStyleSheet
        https://bugs.webkit.org/show_bug.cgi?id=155219

        Reviewed by Tim Horton.

        - Moves to a model for user content where instead of using a WebCore::UserContentController
          object, we implement the new WebCore::UserContentProvider interface (on the existing 
          WebUserContentController object).
        - Uses this to maintain maps of UserStylesSheets and UserScripts along with their identifiers,
          freeing up the URL, which had been acting as the identifier, to be used as the baseURL which
          was what it was intended for.
        - Adds a baseURL property to _WKUserStyleSheet.
